# infa_2022_kozyrev

./: .gitignore  CMakeLists.txt  README.md
Lab_03.05/: N_1.cpp  N_2.cpp  N_3.cpp  N_4.cpp  N_5.cpp
Lab_1/: N1.cpp  N10.cpp  N11.cpp  N12.cpp  N13.cpp  N14.cpp  N15.cpp  N2.cpp  N3.cpp  N4.cpp  N5.cpp  N6.cpp  N7.cpp  N8.cpp  N9.cpp
Lab_10/: application.cpp  knapsack.cpp  money.cpp
Lab_11/: chocolate.cpp  explosiveness.cpp  game.cpp  grasshopper_artist.cpp  grasshopper_mathematician.cpp  nails.cpp  subsequence.cpp  white_king.cpp  white_pawn.cpp
Lab_2/: N_0.cpp  N_1.cpp  N_10.cpp  N_11.cpp  N_12.cpp  N_2.cpp  N_3.cpp  N_4.cpp  N_5.cpp  N_6.cpp  N_7.cpp  N_8.cpp  N_9.cpp
Lab_3/: N1.cpp  N10.cpp  N11.cpp  N12.cpp  N2.cpp  N3.cpp  N4.cpp  N5.cpp  N6.cpp  N7.cpp  N8.cpp  N9.cpp
Lab_4/: N1.cpp  N2.cpp  N3.cpp  N4.cpp  N5.cpp  N6.cpp
Lab_5/: Bubble_sort.cpp  Merge_sort.cpp  Quick_sort.cpp
Lab_6/: N_1.cpp  N_2.cpp
Lab_7/: Lab_2.cpp
Lab_8/: N_1.cpp
Lab_9/: N1.cpp  N11.cpp  N2.cpp  N5.cpp  N6.cpp  N7.cpp  lists.cpp
kr/: main.cpp
