cmake_minimum_required(VERSION 3.21)
project(infa_2022_kozyrev)

set(CMAKE_CXX_STANDARD 23)

add_executable(infa_2022_kozyrev Lab_1/N1.cpp Lab_1/N3.cpp Lab_1/N4.cpp Lab_1/N5.cpp Lab_1/N6.cpp Lab_1/N7.cpp Lab_1/N8.cpp Lab_1/N9.cpp Lab_1/N10.cpp Lab_1/N11.cpp Lab_1/N12.cpp Lab_1/N13.cpp Lab_1/N14.cpp Lab_1/N15.cpp Lab_2/N_0.cpp Lab_2/N_1.cpp Lab_2/N_2.cpp Lab_2/N_3.cpp Lab_2/N_4.cpp Lab_2/N_5.cpp Lab_2/N_6.cpp Lab_2/N_7.cpp Lab_2/N_8.cpp Lab_2/N_9.cpp Lab_2/N_10.cpp Lab_2/N_11.cpp Lab_2/N_12.cpp Lab_3/N1.cpp Lab_3/N2.cpp Lab_3/N3.cpp Lab_3/N4.cpp Lab_3/N5.cpp Lab_3/N6.cpp Lab_3/N7.cpp Lab_3/N8.cpp Lab_3/N9.cpp Lab_3/N10.cpp Lab_3/N11.cpp Lab_3/N12.cpp)

add_executable(N1 Lab_3/N1.cpp)
add_executable(N2 Lab_3/N2.cpp)
add_executable(N3 Lab_3/N3.cpp)
add_executable(N4 Lab_3/N4.cpp)
add_executable(N5 Lab_3/N5.cpp)
add_executable(N6 Lab_3/N6.cpp)
add_executable(N7 Lab_3/N7.cpp)
add_executable(N8 Lab_3/N8.cpp)
add_executable(N9 Lab_3/N9.cpp)
add_executable(N10 Lab_3/N10.cpp)
add_executable(N11 Lab_3/N11.cpp)
add_executable(N12 Lab_3/N12.cpp)