cmake_minimum_required(VERSION 3.21)
project(infa_2022_kozyrev)

set(CMAKE_CXX_STANDARD 23)

add_executable(infa_2022_kozyrev Lab_1/N1.cpp Lab_1/N3.cpp Lab_1/N4.cpp Lab_1/N5.cpp Lab_1/N6.cpp Lab_1/N7.cpp Lab_1/N8.cpp Lab_1/N9.cpp Lab_1/N10.cpp Lab_1/N11.cpp Lab_1/N12.cpp Lab_1/N13.cpp Lab_1/N14.cpp Lab_1/N15.cpp Lab_2/N_0.cpp Lab_2/N_1.cpp Lab_2/N_2.cpp Lab_2/N_3.cpp Lab_2/N_4.cpp Lab_2/N_5.cpp Lab_2/N_6.cpp Lab_2/N_7.cpp Lab_2/N_8.cpp Lab_2/N_9.cpp Lab_2/N_10.cpp Lab_2/N_11.cpp Lab_2/N_12.cpp Lab_3/N1.cpp Lab_3/N2.cpp Lab_3/N3.cpp Lab_3/N4.cpp Lab_3/N5.cpp Lab_3/N6.cpp Lab_3/N7.cpp Lab_3/N8.cpp Lab_3/N9.cpp Lab_3/N10.cpp Lab_3/N11.cpp Lab_3/N12.cpp Lab_4/N1.cpp Lab_4/N2.cpp Lab_4/N3.cpp Lab_4/N4.cpp Lab_4/N5.cpp Lab_4/N6.cpp Lab_5/Bubble_sort.cpp Lab_8/N_1.cpp Lab_9/lists.cpp Lab_10/knapsack.cpp Lab_10/money.cpp Lab_10/application.cpp)

add_executable(N_1 Lab_03.05/N_1.cpp Lab_03.05/N_3.cpp Lab_03.05/N_4.cpp)
add_executable(N_2 Lab_03.05/N_2.cpp)
add_executable(N_3 Lab_03.05/N_3.cpp)
add_executable(N_4 Lab_03.05/N_4.cpp)
add_executable(N_5 Lab_03.05/N_5.cpp)