cmake_minimum_required(VERSION 3.21)
project(infa_2022_kozyrev)

set(CMAKE_CXX_STANDARD 23)

add_executable(infa_2022_kozyrev Lab_1/N1.cpp)
add_executable(chocolate Lab_11/chocolate.cpp)
add_executable(explosiveness Lab_11/explosiveness.cpp)
add_executable(grasshopper_mathematician Lab_11/grasshopper_mathematician.cpp)
add_executable(grasshopper_artist Lab_11/grasshopper_artist.cpp)
add_executable(white_king Lab_11/white_king.cpp)